# encoder

./: .gitignore  CMakeLists.txt  CMakePresets.json
.claude/: CLAUDE.md
App/Inc/: ui_menu.h
App/Src/: main.c  ui_menu.c
BSP/Inc/: SDK.h  main.h
Core/Inc/: lv_port.h  main.h  stm32g0xx_hal_conf.h
Core/Src/: SDK_fixed.lib  main.c  syscalls.c  uart_log.c  ui_menu.c
Drivers/CMSIS/Device/ST/STM32G0xx/Source/Templates/gcc/: STM32G070xx_FLASH.ld
Middlewares/lvgl/: lv_conf.h
Port/Inc/: comm.h
Port/Src/: comm.c  lv_port.c  uart_log.c
cmake/: arm-none-eabi.cmake
docs/: protocol.md
ref/LCD_Button_230531_SDKExample/Core/Inc/: main.h
ref/LCD_Button_230531_SDKExample/Core/Src/: SDK.lib  main.c  stm32g0xx_hal_msp.c  stm32g0xx_it.c
ref/LCD_Button_230531_SDKExample/MDK-ARM/: LCD_Button.uvguix.laifz  LCD_Button.uvoptx  LCD_Button.uvprojx
ref/LCD_Button_230531_SDKExample/MDK-ARM/LCD_Button/: SDKExample.build_log.htm  SDKExample.map  main.crf  stm32g0xx_hal.crf  stm32g0xx_hal_cortex.crf  stm32g0xx_hal_dma.crf  stm32g0xx_hal_dma_ex.crf  stm32g0xx_hal_exti.crf  stm32g0xx_hal_flash.crf  stm32g0xx_hal_flash_ex.crf  stm32g0xx_hal_gpio.crf  stm32g0xx_hal_msp.crf  stm32g0xx_hal_pwr.crf  stm32g0xx_hal_pwr_ex.crf  stm32g0xx_hal_rcc.crf  stm32g0xx_hal_rcc_ex.crf  stm32g0xx_hal_spi.crf  stm32g0xx_hal_spi_ex.crf  stm32g0xx_hal_tim.crf  stm32g0xx_hal_tim_ex.crf  stm32g0xx_hal_uart.crf  stm32g0xx_hal_uart_ex.crf  stm32g0xx_hal_usart.crf  stm32g0xx_hal_usart_ex.crf  stm32g0xx_it.crf  system_stm32g0xx.crf
ref/LCD_Button_230531_SDKExample/MDK-ARM/RTE/_LCD_Button/: RTE_Components.h
